--- a/templates/index.html
+++ b/templates/index.html
@@ -78,6 +78,7 @@
 <div class="container mt-4 mb-4 main-content"> <!-- Added main-content class for styling -->
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
+        {% for image in images %}
         <div class="carousel-item {% if loop.first %} active {% endif %}">
           <img class="d-block w-100" src="{{ url_for('static', filename=image) }}" alt="Slide">
         </div>
